<?xml version="1.0"?>
<package>
  <name>wisson_kn800</name>
  <version>1.3.3</version>
  <description>This package is the ROS driver for Nimbo KN800 from Wisson Robotics.  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="huangzhiwei@wisson.com">Zhiwei Huang</author>
  <maintainer email="huangzhiwei@wisson.com">Zhiwei Huang</maintainer>
 
  <url type="website">http://wisson-robotics.com</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>

 

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>urdf</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
